Fix whitespace right

--- a/assets/index.css
+++ b/assets/index.css
@@ -26,13 +26,13 @@
 
 .wrapper:after {
     content: "";
+    position: absolute;
+    z-index: 2;
     display: block;
     pointer-events: none;
-    z-index: 2;
     width: 100%;
     height: 50%;
     top: -2px;
-    position: absolute;
     background-image: rgb(22,22,22,0);
     background: linear-gradient(0deg, rgb(22,22,22,0) 0%, rgba(22,22,22,76%) 100%);
 }
@@ -84,6 +84,8 @@
 
 .icons-wrapper:after {
     content: "";
+    position: absolute;
+    z-index: 2;
     display: block;
     pointer-events: none;
     right: -2px;
@@ -99,6 +101,7 @@
 
 .icons {
     position: absolute;
+    z-index: 5;
     bottom: 20px;
     right: 20px;
 }
